--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<!--Testando sicronização-->
     <div class="container">
         <div class="container__conteudo">
             <div class="container__informacoes">
